refactor(backend): upgrade deprecated framework and sdk apis
- upgrade HttpStatus.PAYLOAD_TOO_LARGE to HttpStatus.CONTENT_TOO_LARGE
- upgrade MockMvc isPayloadTooLarge() to isContentTooLarge()
- upgrade MockMvc isUnprocessableEntity() to isUnprocessableContent()
- upgrade AWS DefaultCredentialsProvider.create() to builder().build()
- replace deprecated JsonNode.fields() iteration with JsonNode.properties()
- replace deprecated Jackson 3 JsonNode.asText() with JsonNode.asString()
- upgrade Mockito @Mock(lenient = true) to @Mock(strictness = Mock.Strictness.LENIENT)
- upgrade deprecated new URL(String) to URI.create(String).toURL()
- remove unused java.time.Instant import in S3ObjectStorageProvider